syntax = "proto3";
package state;
option go_package = "pb";

import "wrappers.proto";

message Guild {
	enum VerificationLevel {
		NONE = 0;
		LOW = 1;
		MEDIUM = 2;
		HIGH = 3;
	}

	string id = 1;
	BytesValue name = 2;
	BytesValue icon = 3;
	BytesValue region = 4;
	BytesValue afk_channel_id = 5;
	BytesValue embed_channel_id = 6;
	BytesValue owner_id = 7;
	BytesValue joined_at = 8;
	BytesValue splash = 9;
	Int32Value afk_timeout = 10;
	Int32Value member_count = 11;
	VerificationLevel verification_level = 12;
	BoolValue embed_enabled = 13;
	BoolValue large = 14;
	Int32Value default_message_notifications = 15;
}

message GetGuildRequest {
	string id = 1;
}
message GetGuildResponse {
	Guild guild = 1;
}
message SetGuildRequest {
	Guild guild = 1;
}
message SetGuildResponse {}
message UpdateGuildRequest {
	string id = 1;
	Guild guild = 2;
}
message UpdateGuildResponse {}
